--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,284 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+}
+
+.content {
+  margin: 133px 30px;
+  display: flex;
+  gap: 30px;
+  align-items: flex-end;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  gap: 16px;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  justify-content: start;
+  height: 534px;
+  width: 392px;
+  padding-top: 3px;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.content__list-container {
+  position: relative;
+  overflow: auto;
+  width: 399px;
+  height: 298px;
+  display: flex;
+  flex-direction: column;
+  align-self: baseline;
+  gap: 30px;
+  padding-bottom: 2px;
+  /* пофиксить согласно макету в Pixel perfect */
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  position: relative;
+}
+
+.result__video {
+  object-fit: cover;
+  width: inherit;
+  height: inherit;
+  object-position: center;
+}
+
+.content__list-item {
+  padding-right: 7px;
+}
+
+.content__list {
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  flex-grow: 1;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  width: 392px;
+}
+
+.content__video-card-thumbnail {
+  min-width: 194px;
+  height: 103px;
+  margin-left: auto;
+  object-position: 50% 50%;
+  object-fit: cover;
+
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 3px 0 0 3px;
+  gap: 4px;
+  width: 194px;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.title {
+  font-size: 75px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  line-height: 94%;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  color: inherit;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-underline-offset: 6px;
+  text-decoration-color: #ffffff;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__video-card-title {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  line-height: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.content__video-card-description {
+  line-height: 1;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__fieldset {
+  border: none;
+  gap: 6px;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.search-form__label-text:hover {
+text-decoration: underline;
+text-underline-offset: 4px;
+
+}
+.search-form__textfield::placeholder {
+  color: rgb(255 255 255 / 0.7);
+}
+
+.search-form__textfield {
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+  appearance: none;
+  background-color: transparent;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  width: 224px;
+  padding: 2px 0;
+}
+
+.search-form__label:focus {
+  outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+}
+
+.search-form__pseudo-checkbox {
+  padding: 1px;
+  border: 1px solid #fff;
+  inline-size: 19px;
+  block-size: 19px;
+  cursor: pointer;
+}
+
+
+.search-form__checkbox:checked+.search-form__pseudo-checkbox::after {
+  content: "";
+  inline-size: 15px;
+  block-size: 15px;
+  display: block;
+  opacity: 1;
+  background-color: #fff;
+}
+
+.button {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  border: 1px solid;
+  color: #fff;
+  background-color: transparent;
+  block-size: 34px;
+  width: 194px;
+  justify-content: center;
+  align-self: flex-end;
+  font-weight: 700;
+  min-height: 34px;
+  cursor: pointer;
+}
+
+.more-button {
+  width: 390px;
+  align-self: center;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  width: 194px;
+}
+
+.button:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 h1,
@@ -27,7 +302,9 @@ ul,
 ol,
 li,
 blockquote,
-fieldset {
+fieldset,
+input,
+button {
   margin: 0;
   padding: 0;
 }
@@ -47,5 +324,5 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
