fix after review

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,41 @@ html {
 
 .page {
   inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
+  place-items: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+fieldset,
+input,
+button {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
 }
 
 .content {
   margin: 133px 30px;
   display: flex;
   gap: 30px;
-  align-items: flex-end;
+  place-items: center;
 }
 
 .result {
@@ -38,7 +59,6 @@ html {
   flex-direction: column;
   gap: 21px;
   justify-content: start;
-  height: 534px;
   width: 392px;
   padding-top: 3px;
 }
@@ -101,7 +121,6 @@ html {
   margin-left: auto;
   object-position: 50% 50%;
   object-fit: cover;
-
 }
 
 .content__video-card-description-container {
@@ -135,27 +154,25 @@ html {
   display: block;
   color: inherit;
 }
+.content__card-link:focus {
+  outline: none;
+}
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
 
 .content__card-link_current {
   background-color: #545050;
 }
 
+.content__list-item:hover .content__card-link {
+  text-decoration: underline;
+  text-decoration-color: #ffffff;
+  text-underline-offset: 2px;
+}
+
 .content__card-link:active {
   background-color: #545050;
-}
-
-.content__card-link:hover {
-  text-decoration: underline;
-  text-underline-offset: 6px;
-  text-decoration-color: #ffffff;
-}
-
-.content__card-link:focus {
-  outline: none;
-}
-
-.content__card-link:focus-visible {
-  outline: 1px solid #fff;
 }
 
 .content__video-card-title {
@@ -165,6 +182,7 @@ html {
   line-height: 1;
   text-overflow: ellipsis;
   overflow: hidden;
+  line-clamp: 1;
 }
 
 .content__video-card-description {
@@ -202,9 +220,8 @@ html {
 }
 
 .search-form__label-text:hover {
-text-decoration: underline;
-text-underline-offset: 4px;
-
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 .search-form__textfield::placeholder {
   color: rgb(255 255 255 / 0.7);
@@ -240,8 +257,7 @@ text-underline-offset: 4px;
   cursor: pointer;
 }
 
-
-.search-form__checkbox:checked+.search-form__pseudo-checkbox::after {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: "";
   inline-size: 15px;
   block-size: 15px;
@@ -282,6 +298,7 @@ text-underline-offset: 4px;
 
 .button:active {
   background-color: #545050;
+  text-decoration: none;
 }
 
 .button:focus {
@@ -291,27 +308,6 @@ text-underline-offset: 4px;
 .button:focus-visible {
   outline: 1px solid #fff;
   outline-offset: 1px;
-}
-
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-fieldset,
-input,
-button {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  list-style: none;
 }
 
 /* Кастомный скроллбар */
